fix title positioning on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -256,6 +256,6 @@ p {
   }
 
   .header-title {
-    top: 10px;
+    top: 0px;
   }
 }
